Various fixes for boarding pass